--- a/src/app/components/Documentos/nomina/nomina.component.html
+++ b/src/app/components/Documentos/nomina/nomina.component.html
@@ -1,5 +1,5 @@
 <!--primer panel-->
-<div class="container-fluid">
+<div class="container-fluid">z
 <div class="panel panel-primary">
     <div class="panel-heading" id="panels">Compobante emisor</div>
     <div class="panel-body d-flex justify-content-center">
