--- a/src/app/components/Registros/Rretenciones/Rretenciones.component.html
+++ b/src/app/components/Registros/Rretenciones/Rretenciones.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="panel panel-primary">
 <div class="panel-heading" id="panels">Filtrado de componentes fidcales digitales</div>
      <div class="panel-body">
@@ -205,7 +206,7 @@
                             Razon social
                         </font>
                     </div>
-                    <div>
+                    <div class="col-sm-7">
                         <input type="text" name="Rso" class="form-control" id="Rsocial" placeholder="0042 MUNICIPIO DE ATLAHUILCO">
                     </div>
                 </div>
@@ -289,13 +290,13 @@
                             Folio inicial
                         </font>
                     </div>
-                    <div>
+                    <div class="col-sm-9">
                         <input type="text" name="Fol" class="form-control" id="FolioI" placeholder="criterio de busqueda">
                     </div>
                 </div>
 
                 <div>
-                <button type="button" class="btn btn-success" value="">Exportar excel</button>
+                <button type="button" class="btn btn-success" value="" style="float: right;">Exportar excel</button>
             </div>                    
             </div>
 
@@ -320,3 +321,5 @@
         <br>
  </div>
  </div>
+ </div>
+ 
