--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container-fluid">
-<nav class="navbar navbar-icon-top navbar-expand-lg" style="background-color: #336666">
+<nav class="navbar navbar-icon-top navbar-expand-lg" style="background-color: #336666" role="navigation">
+<div class="navbar-header">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #85929E">
     <span class="navbar-toggler-icon"></span>
   </button>
+  </div>
 
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
