--- a/src/app/components/Registros/RCFDI33/Rcfdi33.component.html
+++ b/src/app/components/Registros/RCFDI33/Rcfdi33.component.html
@@ -1,4 +1,5 @@
 <!--primer panel-->
+<div class="container-fluid">
 <div class="panel panel-primary">
 <div class="panel-heading" id="panels">Filtrado de componentes fidcales digitales</div>
      <div class="panel-body">
@@ -180,7 +181,7 @@
             &nbsp;
 
 
-            <div class="b">
+            <div class="b" id="bo">
                 
             <div>
                 <div class="col-lg-5">
@@ -228,7 +229,7 @@
                             Estado del comprobate
                         </font>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-sm-7">
                         <select class="custon-select form-control" name="Ecomprobante">
                             <option>Todos</option>
                             <option>PRUEBA</option>
@@ -241,16 +242,18 @@
                         </select>
                     </div>
                 </div>
-
+                <br>
+                <br>
                 <div>
                     <div class="col-lg-5">
                         <font>
                             Uso de clave de confirmacion
                         </font>
                     </div>
-                    <div class="col-lg-4">
-                        <select class="custon-select form-control">
+                    <div class="col-sm-7">
+                        <select class="custon-select form-control" name="Ecomprobante">
                             <option>Todos</option>
+                            <option>PRUEBA</option>
                             <option>PRUEBA</option>
                             <option>PRUEBA</option>
                             <option>PRUEBA</option>
@@ -343,7 +346,7 @@
 
         <br>
 
-        <table style="background-color: #006666" id="NSER">
+        <table style="background-color: #006666" id="NSER" class="table table-responsive">
             <tr>
                 <th>NO SE ENCONTRARON REGISTROS</th>
             </tr>
@@ -380,5 +383,6 @@
             <br>
         </form>
 
+ </div>
  </div>
  </div>
