--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -33,10 +33,10 @@
               </div>
               <div id="collapse2" class="panel-collapse collapse"> 
                 <ul class="list-group">
-                  <li class="list-group-item"><a routerLink="">Generar CFDI 3.3</a></li>
+                  <li class="list-group-item"><a routerLink="../g-cfdi33">Generar CFDI 3.3</a></li>
                   <li class="list-group-item"><a routerLink="../nomina">Generar nómina 1.2</a></li>
                   <li class="list-group-item"><a routerLink="../pagos">Generar complemento pagos</a></li>
-                  <li class="list-group-item"><a routerLink="../retenciones">Generar retenciones</a></li>
+                  <li class="list-group-item"><a routerLink="../DRetenciones">Generar retenciones</a></li>
                   <li class="list-group-item"><a routerLink="../comercio">Generar comercio exterior 1.1</a></li>
                 </ul>
               </div>
